@@ -3,27 +3,26 @@ package com.example.mealqr.exceptions;
 import lombok.Getter;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Getter
 public class ApiError {
 
-    private HttpStatus status;
-    private String message;
-    private List<String> errors;
+    private final HttpStatus status;
+    private final String message;
+    private final List<String> errors;
 
-    public ApiError(HttpStatus status, String message, List<String> errors) {
+    public ApiError(String message, List<String> errors) {
         super();
-        this.status = status;
+        this.status = HttpStatus.BAD_REQUEST;
         this.message = message;
         this.errors = errors;
     }
 
-    public ApiError(HttpStatus status, String message, String error) {
+    public ApiError(String message) {
         super();
-        this.status = status;
+        this.status = HttpStatus.BAD_REQUEST;
         this.message = message;
-        errors = Arrays.asList(error);
+        this.errors = List.of();
     }
 }
